Native/Test/KL/pm-error-function-has-same-name-as-variable.out
pm-error-function-has-same-name-as-variable.kl:3:1: error: non-function symbol 'display' already exists
