Native/Test/KL/pm-error-function-has-same-name-as-variable.kl
const Size display = 42;

function display() {
  report "hello";
}
